--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
-JWT_SECRET = zbhjcdbhbhjbglslkydytroijpjp64derw3uwbu;
+JWT_SECRET = zbhjcdbhbhjbglslkydytroijpjp64derw3uwbu
+# MONGODB_URI = "mongodb+srv://dbUser:wTmP6hrxFCEHtsRi@cluster0.ze56osj.mongodb.net/test"
